version 2 - fixes